# limbic

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
amygdala/: __init__.py  cache.py  cluster.py  document_similarity.py  embed.py  index.py  knowledge_map.py  knowledge_map_gen.py  llm.py  novelty.py  search.py
experiments/: PLAN.md  autoresearch_bayesian_eval.py  autoresearch_bayesian_grid.py  autoresearch_eval.py  autoresearch_results.tsv  calibration_petrarca_thresholds.md  eval_norwegian_paws.py  eval_qqp_novelty.py  eval_scifact_search.py  eval_stsb.py  exp10_temporal_decay.py  exp11_otak_whitening.py  exp12_soft_zca.py  exp13_similarity_graph.py  exp14_task_embeddings.py  exp15_large_corpus_novelty.py  exp16_cross_lingual.py  exp17_query_expansion.py  exp18_incremental_clustering.py  exp19_nfcorpus_eval.py  exp1_model_comparison.py  exp20_embedding_cache.py  exp21_all_but_top.py  exp2_whitening_sweep.py  exp3_novelty_sweep.py  exp4_fusion_comparison.py  exp5_clustering.py  exp6_nli_eval.py  exp7_genericization.py  exp8_karpathy_loop.py  exp9_reranking.py  exp_heuristic_vs_bayesian.py  knowledge_map_simulation.py  probe_ui.py  simulation_results.json  web_research_2026-03-19.md
experiments/graphs/: hamarquizen.json  loro_mirror.json
experiments/results/: autoresearch_bayesian_grid.json  eval_norwegian_results.json  eval_qqp_results.json  eval_scifact_results.json  exp10_results.json  (+22 more)
limbic/: __init__.py
research/: advanced_algorithms.md  assessment_datasets.md  tutorial_platform_graphs.md
tests/: test_calibrate.py  test_claude_cli.py  test_cluster.py  test_embed.py  test_knowledge_map.py  test_novelty.py  test_payload_cache.py  test_search.py  test_temporal.py  test_wikidata.py  test_wikidata_live.py  test_wikidata_resolve.py  test_wikidata_resolve_live.py
(+23 files in other folders)
